testsuite/tests/rename/should_fail/T6148c.hs
module T6148c where

data T = T

c :: (,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,)
     T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T
     T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T
     T T T
c = c
