testsuite/tests/rename/should_fail/T6148c.stderr

T6148c.hs:5:6: error:
    • A 63-tuple is too large for GHC
        (max size is 62)
        Workaround: use nested tuples or define a data type
    • In the type signature:
        c :: (,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,) T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T T
